force-app/main/default/objects/GasChoiceCalcInputs__c/GasChoiceCalcInputs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Gas Choice Calculation Inputs</label>
</CustomObject>