force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Ag_Enrollment_Open__c.field-meta.xml
<CustomField>
    <fullName>Ag_Enrollment_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the enrollment period is open.  This makes control numbers required for Ag orders in the &quot;next program year&quot;</description>
    <inlineHelpText>Check this box if the enrollment period is open.  This makes control numbers required for Ag orders in the &quot;next program year&quot;</inlineHelpText>
    <label>Ag Enrollment Open</label>
    <type>Checkbox</type>
</CustomField>