force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Capacity_pricing_methodology__c.field-meta.xml
<CustomField>
    <fullName>Capacity_pricing_methodology__c</fullName>
    <defaultValue>&quot;premise&quot;</defaultValue>
    <description>Enter one of the following options in simple text: premise, pin, division</description>
    <inlineHelpText>Enter one of the following options in simple text: premise, pin, division</inlineHelpText>
    <label>Capacity pricing methodology</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>