force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Current_Program_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Year__c</fullName>
    <description>What year is it in Gas Choice?</description>
    <inlineHelpText>What year is it in Gas Choice?</inlineHelpText>
    <label>Current Program Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>