force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Max_Position_Rows_per_Deal_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Max_Position_Rows_per_Deal_Ticket__c</fullName>
    <defaultValue>20000</defaultValue>
    <description>avoids the too many rowls soql visualforce issue.  How many positions can close in a single batch?</description>
    <inlineHelpText>avoids the too many rowls soql visualforce issue.  How many positions can close in a single batch?</inlineHelpText>
    <label>Max Position Rows per Deal Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>