force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Maximum_Annual_Dth_SmartBill__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Annual_Dth_SmartBill__c</fullName>
    <defaultValue>500</defaultValue>
    <description>In Dth, how much can the customer use and still qualify for a smartbill?</description>
    <inlineHelpText>In Dth, how much can the customer use and still qualify for a smartbill?</inlineHelpText>
    <label>Maximum Annual Dth SmartBill</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>