force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Maximum_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Discount__c</fullName>
    <description>What&#39;s the most we&#39;d knock off the margin for any usage?</description>
    <inlineHelpText>What&#39;s the most we&#39;d knock off the margin for any usage?</inlineHelpText>
    <label>Maximum Discount</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>