force-app/main/default/objects/GasChoiceCalcInputs__c/fields/NE_Enrollment_Open__c.field-meta.xml
<CustomField>
    <fullName>NE_Enrollment_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the nebraska enrollment period is open.  This requires control numbers for next program year orders</description>
    <inlineHelpText>Check this box if the nebraska enrollment period is open.  This requires control numbers for next program year orders</inlineHelpText>
    <label>NE Enrollment Open</label>
    <type>Checkbox</type>
</CustomField>