force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Nebraska_Ag_Customer_Charge__c.field-meta.xml
<CustomField>
    <fullName>Nebraska_Ag_Customer_Charge__c</fullName>
    <description>per month cost for ag customers (paid by supplier)</description>
    <inlineHelpText>per month cost for ag customers (paid by supplier)</inlineHelpText>
    <label>Nebraska Ag Customer Charge</label>
    <precision>6</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>