force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Nebraska_R_C_Customer_Charge__c.field-meta.xml
<CustomField>
    <fullName>Nebraska_R_C_Customer_Charge__c</fullName>
    <defaultValue>1.17</defaultValue>
    <label>Nebraska R/C Customer Charge</label>
    <precision>6</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>