force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Next_Program_Year__c.field-meta.xml
<CustomField>
    <fullName>Next_Program_Year__c</fullName>
    <description>What year are we selling pre-enrollments for?</description>
    <inlineHelpText>What year are we selling pre-enrollments for?</inlineHelpText>
    <label>Next Program Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>