force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Peak_Month_1__c.field-meta.xml
<CustomField>
    <fullName>Peak_Month_1__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Which month number (Jan =1, Dec=12) the first peak month is for R/C capacity allocations</description>
    <inlineHelpText>Which month number (Jan =1, Dec=12) the first peak month is for R/C capacity allocations</inlineHelpText>
    <label>Peak Month #1</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>