force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Peak_Month_2__c.field-meta.xml
<CustomField>
    <fullName>Peak_Month_2__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Second peak month number (Jan =1, Dec =12)</description>
    <inlineHelpText>Second peak month number (Jan =1, Dec =12)</inlineHelpText>
    <label>Peak Month #2</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>