force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Price_break_increment__c.field-meta.xml
<CustomField>
    <fullName>Price_break_increment__c</fullName>
    <defaultValue>100</defaultValue>
    <description>How much usage until the next price break kicks in?  Example: For every 100 therms (increment), we give you another 1% (volume discount) off the margin</description>
    <inlineHelpText>How much usage until the next price break kicks in?  Example: For every 100 therms (increment), we give you another 1% (volume discount) off the margin</inlineHelpText>
    <label>Price break increment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>