force-app/main/default/objects/GasChoiceCalcInputs__c/fields/SmartCap_Error_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>SmartCap_Error_Tolerance__c</fullName>
    <description>if the smartcap error is larger than this number ($/Dth) it&#39;ll rerun to try to improve</description>
    <inlineHelpText>if the smartcap error is larger than this number ($/Dth) it&#39;ll rerun to try to improve</inlineHelpText>
    <label>SmartCap Error Tolerance</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>