force-app/main/default/objects/GasChoiceCalcInputs__c/fields/SmartCap_Guess_Factor_A__c.field-meta.xml
<CustomField>
    <fullName>SmartCap_Guess_Factor_A__c</fullName>
    <label>SmartCap Guess Factor A</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>