force-app/main/default/objects/GasChoiceCalcInputs__c/fields/SmartCap_Option_Cost_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>SmartCap_Option_Cost_Multiplier__c</fullName>
    <description>Whatever the market says the cost is, what do you multiply it by for our trading desk?</description>
    <inlineHelpText>Whatever the market says the cost is, what do you multiply it by for our trading desk?</inlineHelpText>
    <label>SmartCap Option Cost Multiplier</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>