force-app/main/default/objects/GasChoiceCalcInputs__c/fields/SmartCap_Option_Minimum__c.field-meta.xml
<CustomField>
    <fullName>SmartCap_Option_Minimum__c</fullName>
    <description>no matter what the market says, what&#39;s the lowest value you can pay for an option? $/Dth</description>
    <inlineHelpText>no matter what the market says, what&#39;s the lowest value you can pay for an option? $/Dth</inlineHelpText>
    <label>SmartCap Option Minimum</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>