force-app/main/default/objects/GasChoiceCalcInputs__c/fields/SmartCap_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>SmartCap_Retry_Count__c</fullName>
    <label>SmartCap Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>