force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Volume_Discount__c.field-meta.xml
<CustomField>
    <fullName>Volume_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How much usage until the next price break kicks in?  Example: For every 1000 therms (increment), we give you another 1% (volume discount) off the margin</description>
    <inlineHelpText>How much usage until the next price break kicks in?  Example: For every 1000 therms (increment), we give you another 1% (volume discount) off the margin</inlineHelpText>
    <label>Volume Discount</label>
    <precision>10</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>