force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Volume_price_break_threshhold__c.field-meta.xml
<CustomField>
    <fullName>Volume_price_break_threshhold__c</fullName>
    <defaultValue>100</defaultValue>
    <description>How many therms/year does the customer need to use before we start a price break?</description>
    <inlineHelpText>How many therms/year does the customer need to use before we start a price break?</inlineHelpText>
    <label>Volume price break threshhold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>