force-app/main/default/objects/GasChoiceCalcInputs__c/fields/WY_Enrollment_Open__c.field-meta.xml
<CustomField>
    <fullName>WY_Enrollment_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the Wyoming enrollment period is open.  This requires control numbers for next program year orders</description>
    <inlineHelpText>Check this box if the Wyoming enrollment period is open.  This requires control numbers for next program year orders</inlineHelpText>
    <label>WY Enrollment Open</label>
    <type>Checkbox</type>
</CustomField>