force-app/main/default/objects/GasChoiceCalcInputs__c/fields/Wyoming_Choice_Fee__c.field-meta.xml
<CustomField>
    <fullName>Wyoming_Choice_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <description>only applies on smartBills--we don&#39;t pay it, the customer does</description>
    <inlineHelpText>only applies on smartBills--we don&#39;t pay it, the customer does</inlineHelpText>
    <label>Wyoming Choice Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>